--- a/html-css/module-11/src/sass/base/typography.scss
+++ b/html-css/module-11/src/sass/base/typography.scss
@@ -5,8 +5,8 @@
   font-style: normal;
   font-weight: 400;
   src: local('Montserrat Regular'), local('Montserrat-Regular'),
-    url('../../fonts/montserrat-v14-latin-regular.woff2') format('woff2'),
-    /* Super Modern Browsers */ url('../../fonts/montserrat-v14-latin-regular.woff') format('woff'); /* Modern Browsers */
+    url('../fonts/montserrat-v14-latin-regular.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../fonts/montserrat-v14-latin-regular.woff') format('woff'); /* Modern Browsers */
 }
 
 /* montserrat-700 - latin */
@@ -15,8 +15,8 @@
   font-style: normal;
   font-weight: 700;
   src: local('Montserrat Bold'), local('Montserrat-Bold'),
-    url('../../fonts/montserrat-v14-latin-700.woff2') format('woff2'),
-    /* Super Modern Browsers */ url('../../fonts/montserrat-v14-latin-700.woff') format('woff'); /* Modern Browsers */
+    url('../fonts/montserrat-v14-latin-700.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../fonts/montserrat-v14-latin-700.woff') format('woff'); /* Modern Browsers */
 }
 
 /* kaushan-script-regular - latin */
@@ -25,8 +25,8 @@
   font-style: normal;
   font-weight: 400;
   src: local('Kaushan Script'), local('KaushanScript-Regular'),
-    url('../../fonts/kaushan-script-v8-latin-regular.woff2') format('woff2'),
-    /* Super Modern Browsers */ url('../../fonts/kaushan-script-v8-latin-regular.woff') format('woff'); /* Modern Browsers */
+    url('../fonts/kaushan-script-v8-latin-regular.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../fonts/kaushan-script-v8-latin-regular.woff') format('woff'); /* Modern Browsers */
 }
 
 /* roboto-300 - latin */
@@ -34,8 +34,8 @@
   font-family: 'RobotoL';
   font-style: normal;
   font-weight: 300;
-  src: local('Roboto Light'), local('Roboto-Light'), url('../../fonts/roboto-v20-latin-300italic.woff2') format('woff2'),
-    /* Super Modern Browsers */ url('../../fonts/roboto-v20-latin-300italic.woff') format('woff'); /* Modern Browsers */
+  src: local('Roboto Light'), local('Roboto-Light'), url('../fonts/roboto-v20-latin-300italic.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../fonts/roboto-v20-latin-300italic.woff') format('woff'); /* Modern Browsers */
 }
 
 /* roboto-regular - latin */
@@ -43,6 +43,6 @@
   font-family: 'RobotoR';
   font-style: normal;
   font-weight: 400;
-  src: local('Roboto'), local('Roboto-Regular'), url('../../fonts/roboto-v20-latin-regular.woff2') format('woff2'),
-    /* Super Modern Browsers */ url('../../fonts/roboto-v20-latin-regular.woff') format('woff'); /* Modern Browsers */
+  src: local('Roboto'), local('Roboto-Regular'), url('../fonts/roboto-v20-latin-regular.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../fonts/roboto-v20-latin-regular.woff') format('woff'); /* Modern Browsers */
 }
